Added Self-Trained Classifications

--- a/AI_Multitask_Classifiers.ipynb
+++ b/AI_Multitask_Classifiers.ipynb
@@ -102,6 +102,11 @@
     "# Discuss the speech recognition module, demonstrate usage\n",
     "```\n",
     "\n",
+    "### Special: Sentiment Analysis\n",
+    "```python\n",
+    "# Discuss the sentiment analysis module, demonstrate usage\n",
+    "```\n",
+    "\n",
     "## Conclusion\n",
     "Summarize the capabilities and findings of using these classifiers.\n",
     "\n",
